# Joemt-Archive-View

./: LICENSE  README.md  jvvv_app.py  pyproject.toml
.github/workflows/: windows-build.yml
jvvv/: __init__.py  app.py  config.py  database.py  scanner.py  utils.py
jvvv.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_app.py  test_database.py  test_scanner.py  test_search.py  test_utils.py
