[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "jvvv"
version = "0.1.0"
description = "JVVV catalogue browser and scanner"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "PySide6>=6.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["jvvv*"]
